<resources>
    <string name="app_name">TrainingDiary</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scales">Scales</string>
    <string name="space">---</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="fatPercentage">Fat percentage</string>
    <string name="record">Record</string>
    <string name="Measurements">Measurements</string>
    <string name="neck">Neck</string>
    <string name="back">Back</string>
    <string name="chest">Chest</string>
    <string name="waist">Waist</string>
    <string name="belly">Belly</string>
    <string name="forearm">Forearm</string>
    <string name="measure">Measure</string>
    <string name="statistics">Statistic</string>
    <string name="trainingWeeks">Training weeks</string>
    <string name="trainingDays"> Training days</string>
    <string name="trainingHours">Training hours</string>
    <string name="trainings">Trainings</string>
    <string name="volume">Volume, kg</string>
    <string name="search">Search...</string>
</resources>